# SDK

./: .env.example  .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  go.yaml  publish-python.yaml  publish-typescript.yaml  sync-from-docs.yml
.plans/: SDK-RFC.md  SDK-SPEC-BUILD.md  SDK.md
analysis/: spec_summary.txt
analysis/specs/: adsl-http-proxy.json  deepseek.json  face-change.error  face-change.json  fish.json  flux.json  glm.json  hailuo.json  happyhorse.json  hcaptcha.json  (+19 more)
go/: README.md  audio.go  chat.go  client.go  client_test.go  doc.go  errors.go  face.go  go.mod  images.go  openai.go  options.go  payment.go  search.go  shorturl.go  tasks.go  tasks_resource.go  transport.go  video.go
python/: .gitignore  README.md  pyproject.toml
python/src/acedatacloud/: __init__.py  _client.py
python/src/acedatacloud/_runtime/: errors.py  payment.py  tasks.py  transport.py
python/src/acedatacloud/resources/: adsl.py  aichat.py  aichat2.py  audio.py  captcha.py  chat.py  drawai.py  dreamina.py  face.py  files.py  gemini.py  glm.py  grok.py  images.py  kimi.py  kling.py  midjourney.py  oauth.py  openai_compat.py  platform.py  producer.py  search.py  seedance.py  shorturl.py  suno.py  tasks.py  turnstile.py  veo.py  video.py  webextrator.py
python/tests/: test_captcha.py  test_images.py  test_integration.py  test_kimi.py  test_kling.py  test_map_error.py  test_sdk.py  test_sync_specs.py  test_sync_video_tasks.py  test_tasks.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json  update_transport.py
(+59 files in other folders)
