[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acedatacloud"
version = "0.1.0"
description = "Official Python SDK for AceDataCloud — AI-powered data services"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "ruff>=0.4.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acedatacloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
